# stealable-landmarks

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
landmarks/: asgi.py  settings.py  urls.py  wsgi.py
stealable_landmark/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
stealable_landmark/migrations/: 0001_initial.py  0002_rename_rating_of_stealablitiy_landmark_rating_of_stealablity.py
